# github-dl

./: LICENSE  README.md  pyproject.toml
src/github_dl/: __main__.py
src/github_file_dl/: __main__.py
