[project]
name = "github-dl"
version = "0.1.0"
description = "download github folder or file."
authors = [
    {name = "milisp", email = "milisp@proton.me"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
github-dl = "github_dl.__main__:main"
